fixed the z-index

--- a/game.css
+++ b/game.css
@@ -16,7 +16,7 @@ body {
 
 
 #avatar {
-  z-index: 1;
+  z-index: 2;
   height: 100px;
   position: absolute;
   margin-top: 450px;
@@ -26,7 +26,7 @@ body {
 
 
 #shape1 {
-  z-index: 3;
+  z-index: 2;
   height: 100px;
   position: absolute;
   margin-top: 200px;
@@ -39,7 +39,7 @@ box-shadow:
 0 0 140px 70px #0ff;
 margin-top: 250px;
 margin-left: 450px;
-z-index: 2;
+z-index: 1;
 position: absolute;
 padding: 5px;
 width: 1px;
@@ -48,7 +48,7 @@ border: 1px solid black;
 }
 
 #shape2 {
-  z-index: 3;
+  z-index: 2;
   height: 100px;
   position: absolute;
   margin-top: 150px;
@@ -57,7 +57,7 @@ border: 1px solid black;
 }
 
 #shape3 {
-  z-index: 3;
+  z-index: 2;
   position: absolute;
   height: 100px;
   margin-top: 200px;
@@ -71,7 +71,7 @@ border: 1px solid black;
   height: 50px;
   width: 400px;
   padding:20px;
-  z-index: 3;
+  z-index: 2;
   text: justify; 
   position: absolute;
   margin-top: 350px;
@@ -83,7 +83,7 @@ border: 1px solid black;
 
 #riddle2 {
   display: none;
-  z-index: 3;
+  z-index: 2;
   position: absolute;
   height: 200px;
   width: 200px;
@@ -92,7 +92,7 @@ border: 1px solid black;
 
 #riddle3 {
   display: none;
-  z-index: 3;
+  z-index: 2;
   position: absolute;
   height: 200px;
   width: 200px;
@@ -102,7 +102,7 @@ border: 1px solid black;
 
 
 #spaceship {
-  z-index: 1;
+  z-index: 2;
   height: 200px;
   position: absolute;
   margin-left: 100px;
